Fix badge contrast

--- a/web/themes/pubsub/sass/components/node-teaser-featured-speaker.scss
+++ b/web/themes/pubsub/sass/components/node-teaser-featured-speaker.scss
@@ -29,7 +29,7 @@
   bottom: 0;
   padding: 6px 12px 0 0;
   background: var(--color--white);
-  color: var(--color--sun-45);
+  color: var(--color--sun-40);
   text-transform: uppercase;
   font-size: 14px;
   font-weight: bold;
